tests/docker/resources/dualstack_clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ds-clusterip-pod
spec:
  selector:
    matchLabels:
      k8s-app: nginx-app-clusterip
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: nginx-app-clusterip
    spec:
      containers:
      - name: nginx
        image: rancher/mirrored-library-busybox:1.36.1
        args: ['sh', '-c', 'echo Welcome to nginx! > index.html; hostname > name.html; httpd -vvf']
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: nginx-app-clusterip
  name: ds-clusterip-svc
  namespace: default 
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    k8s-app: nginx-app-clusterip
