tests/docker/resources/flannel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app-flannel-server
spec:
  selector:
    matchLabels:
      k8s-app: httpd-app-flannel
      node-role: server
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: httpd-app-flannel
        node-role: server
    spec:
      containers:
      - name: httpd
        image: rancher/mirrored-library-busybox:1.36.1
        args: ['sh', '-c', 'echo Welcome to httpd! > index.html; hostname > name.html; httpd -vvf']
        ports:
        - containerPort: 80
      nodeSelector:
        node-role: "server"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-app-flannel-agent
spec:
  selector:
    matchLabels:
      k8s-app: httpd-app-flannel
      node-role: agent
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: httpd-app-flannel
        node-role: agent
    spec:
      containers:
      - name: httpd
        image: rancher/mirrored-library-busybox:1.36.1
        args: ['sh', '-c', 'echo Welcome to httpd! > index.html; hostname > name.html; httpd -vvf']
        ports:
        - containerPort: 80
      nodeSelector:
        node-role: "agent"
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-flannel-nodeport-service
spec:
  selector:
    k8s-app: httpd-app-flannel
    node-role: server 
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80  
      nodePort: 30080 
                      
  type: NodePort
