tests/docker/resources/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-test
  namespace: kube-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: rke2-traefik
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
  - name: https
    protocol: TCP
    port: 8443
    targetPort: https
