tests/docker/resources/volume-test.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: local-path-pvc
  namespace: kube-system
spec:
  accessModes:
    - ReadWriteOnce
  storageClassName: local-path
  resources:
    requests:
      storage: 2Gi
---
apiVersion: v1
kind: Pod
metadata:
  name: volume-test
  namespace: kube-system
spec:
  containers:
  - name: volume-test
    image: rancher/mirrored-library-busybox:1.36.1
    command:
      - sleep
      - infinity
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: volv
      mountPath: /data
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
